--- a/css/styles.css
+++ b/css/styles.css
@@ -36,61 +36,14 @@ a, a:hover {
     margin: 0 auto;
 }
 
-#product-details {
-    padding: 20px 0;
-}
-
 .card {
     background-color: #FFF;
     border: 1px solid #D9D9D9;
     border-radius: 4px;
 }
 
-.card-top {
+.line-bottom {
     border-bottom: 1px solid #D9D9D9;
-    padding: 10px;
-    display: flex;
-    justify-content: center;
-}
-
-.card-top img {
-    width: 220px;
-}
-
-.card-bottom {
-    padding: 10px 20px 20px 20px;
-}
-
-.card-bottom h3 {
-    color: #0CAF1D;
-    font-size: 20px;
-}
-
-.card-bottom h4, p {
-    color: #636363;
-    font-size: 12px;
-}
-
-.card-bottom p {
-    margin: 10px 0;
-}
-
-.category-container {
-    display: flex;
-}
-
-.category {
-    padding: 0 20px;
-    margin-right: 20px;
-    background-color: #636363;
-    border-radius: 4px;
-    height: 30px;
-    font-size: 12px;
-    font-weight: 700;
-    color: #FFF;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .btn-page-container {
