--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,10 @@ html, body {
     background-color: var(--dsc-color-bg-primary);
 }
 
+main {
+    padding: 0 20px;
+}
+
 /*-------------------------------------------------------*/
 /* generic styles*/
 
@@ -48,6 +52,7 @@ header {
     height: 70px;
     display: flex;
     align-items: center;
+    padding: 0 20px;
 }
 
 nav {
@@ -85,9 +90,15 @@ a, a:hover {
 /* button styles*/
 
 .dsc-btn-page-container {
-    width: 220px;
+    width: 100%;
     display: grid;
     grid-gap: 20px;
+}
+
+@media (min-width: 576px) {
+    .dsc-btn-page-container {
+        width: 220px;
+    }
 }
 
 .dsc-btn {
