--- a/css/details.css
+++ b/css/details.css
@@ -2,11 +2,13 @@
 
 .dsc-category-container {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .dsc-category {
     padding: 0 20px;
     margin-right: 20px;
+    margin-bottom: 10px;
     background-color: var(--dsc-color-font-primary);
     border-radius: 4px;
     height: 30px;
@@ -29,7 +31,7 @@
 } 
 
 .dsc-product-details-bottom {
-    padding: 10px 20px 20px 20px;
+    padding: 10px 20px;
 }
 
 .dsc-product-details-bottom h3 {
