--- a/css/styles.css
+++ b/css/styles.css
@@ -80,6 +80,16 @@ a, a:hover {
     font-weight: 700;
 }
 
+.dsc-logged-user {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.dsc-logged-user p {
+    font-size: 12px;
+}
+
 /*-------------------------------------------------------*/
 /* card styles*/
 
