--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,23 @@ main {
     margin-top: 20px;
 }
 
+.dsc-txt-left {
+    text-align: left;
+}
+
+.dsc-section-title {
+    text-align: center;
+    color: var(--dsc-color-font-primary);
+    font-size: 16px;
+}
+
+@media (min-width: 576px) {
+    .dsc-section-title {
+        text-align: left;
+        font-size: 24px;
+    }
+}
+
 /*-------------------------------------------------------*/
 /* header styles*/
 
@@ -273,5 +290,94 @@ a, a:hover {
 @media (min-width: 576px) {
     .dsc-form h2 {
         font-size: 24px;
+    }
+}
+
+/*-------------------------------------------------------*/
+/* table styles*/
+
+.dsc-table {
+    width: 100%;
+    border-spacing: 0;
+    border-collapse: collapse;
+}
+
+.dsc-table thead {
+    height: 55px;
+    font-size: 14px;
+    color: var(--dsc-color-font-primary);
+    background-color: var(--dsc-color-card-bg);
+}
+
+.dsc-table tbody {
+    text-align: center;
+    font-size: 12px;
+    color: var(--dsc-color-font-primary);
+    background-color: var(--dsc-color-card-bg);
+}
+
+.dsc-table tbody tr {
+    height: 70px;
+    border-top: 1px solid var(--dsc-color-card-border);
+}
+
+.dsc-table th:nth-child(2) {
+    border-top-left-radius: 10px;
+}
+
+.dsc-table th:last-child {
+    border-top-right-radius: 10px;
+}
+
+
+.dsc-table td:nth-child(2) {
+    padding-left: 10px;
+}
+
+.dsc-table td:last-child {
+    padding-right: 5px;
+}
+
+
+.dsc-tb576 {
+    display: none;
+}
+
+.dsc-tb768 {
+    display: none;
+}
+
+@media (min-width: 576px) {
+    .dsc-tb576 {
+        display: table-cell;
+    }
+
+    .dsc-table th:nth-child(1) {
+        padding-left: 20px;
+        border-top-left-radius: 10px;
+    }
+
+    .dsc-table th:nth-child(2) {
+        border-top-left-radius: 0px;
+    }
+
+    .dsc-table td:nth-child(1) {
+        padding-left: 20px;
+    }
+
+    .dsc-table td:nth-child(2) {
+        padding-left: 0;
+    }
+}
+
+@media (min-width: 768px) {
+    .dsc-tb768 {
+        display: table-cell;
+    }
+}
+
+@media (min-width: 992px) {
+    .dsc-table tbody {
+        font-size: 16px;
     }
 }
