--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
     --dsc-color-bg-primary: #e8e8e8;
     --dsc-color-bg-secundary: #ffe500;
     --dsc-color-bg-tertiary: #636363;
+    --dsc-color-bg-quaternary: #0caf1d;
 
     --dsc-color-card-bg: #fff;
     --dsc-color-card-border: #e8e8e8;
@@ -72,22 +73,60 @@ main {
 /* header styles*/
 
 header {
-    background-color: var(--dsc-color-bg-secundary);
     height: 70px;
     display: flex;
     align-items: center;
     padding: 0 20px;
 }
 
+.dsc-header-client {
+    background-color: var(--dsc-color-bg-secundary);
+    color: var(--dsc-color-font-primary);
+}
+
+.dsc-header-admin {
+    background-color: var(--dsc-color-bg-quaternary);
+    color: var(--dsc-color-font-tertiary);
+}
+
 nav {
     display: flex;
-    color: var(--dsc-color-font-primary);
     justify-content: space-between;
     align-items: center;
 }
 
 nav h1{
-    font-size: 24px;
+    font-size: 16px;
+}
+
+.dsc-navbar-right {
+    display: flex;
+    align-items: center;
+}
+
+.dsc-menu-items-container {
+    display: flex;
+}
+
+.dsc-menu-items-container img {
+    width: 20px;
+    height: 20px;
+}
+
+.dsc-menu-item {
+    display: flex;
+    margin-right: 20px;
+    align-items: center;
+}
+
+.dsc-menu-item p {
+    margin-left: 5px;
+    display: none;
+    font-size: 14px;
+}
+
+.dsc-menu-item-active {
+    font-weight: 700;
 }
 
 a, a:hover {
@@ -105,6 +144,16 @@ a, a:hover {
 
 .dsc-logged-user p {
     font-size: 12px;
+}
+
+@media (min-width: 576px) {
+    nav h1 {
+        font-size: 24px;
+    }
+
+    .dsc-menu-item p {
+        display: unset;
+    }
 }
 
 /*-------------------------------------------------------*/
